fix(console): improve horizontal scrollbar thumb styles

--- a/packages/console/src/scss/normalized.scss
+++ b/packages/console/src/scss/normalized.scss
@@ -60,6 +60,10 @@ table {
   width: 8px;
 }
 
+::-webkit-scrollbar:horizontal {
+  height: 8px;
+}
+
 ::-webkit-scrollbar-thumb {
   background: var(--color-neutral-variant-80);
   border-radius: 4px;
